--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:tools="http://schemas.android.com/tools">
 
     <application
+
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
@@ -13,11 +14,11 @@
             android:theme="@style/Theme.MyGroceryStore"
             tools:targetApi="31">
         <activity
-                android:name=".RegistrationActivity"
+                android:name=".activities.RegistrationActivity"
                 android:exported="false">
         </activity>
         <activity
-                android:name=".LoginActivity"
+                android:name=".activities.LoginActivity"
                 android:exported="false"/>
         <activity
                 android:name=".MainActivity"
@@ -29,4 +30,5 @@
         </activity>
         <meta-data android:name="preloaded_fonts" android:resource="@array/preloaded_fonts"/>
     </application>
+
 </manifest>
